cluster/apps/media/ersatztv/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: media
spec:
  selector:
    app: ersatztv
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8409
