cluster/apps/media/ersatztv/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ersatztv-http
  namespace: media
spec:
  hostnames:
    - ersatztv.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ersatztv
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
